refactor convertCurrencyData with urlcomponents + add localization fo… (#19)
* refactor convertCurrencyData with urlcomponents + add localization for convert result

* change networkmanager

* async/await

---------

Co-authored-by: Roman Podymov <podymfrombryansk@yandex.com>

--- a/CurrencyConverter/en.lproj/Localizable.strings
+++ b/CurrencyConverter/en.lproj/Localizable.strings
@@ -10,5 +10,6 @@
 "home_view.from" = "From";
 "home_view.to" = "To";
 "home_view.convert" = "Convert";
+"home_view.result" = "Result";
 "home_view.enter_amount" = "Enter amount";
 "home_view.done" = "Done";
